--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <rapi-doc
-      spec-url="/Users/bk/Downloads/openapi.yaml"
+      spec-url="./openapi.yaml"
       render-style="read"
       show-header="true"
       theme="light"
